# webscraper-futbol

./: .gitignore  README.md  pyproject.toml  run.bat  run.ps1  run_all.bat  run_backend.bat  run_dev.ps1  run_frontend.bat  test.txt
auf-frontend/: .env.production  index.html  package-lock.json  package.json
auf-frontend/src/: App.jsx  index.css
auf_analyzer/Modelo/: equipo.py  jugador.py
backend/: Dockerfile  api.py  requirements.txt
backend/auf_analyzer/: __init__.py  demo_sprint2.py  paths.py  services.py
backend/auf_analyzer/Modelo/: partido.py  stats.py  torneo.py
backend/src/webscraper_futbol/scrapers/: fbref_scraper.py
src/webscraper_futbol/: __main__.py  __main__.py.bak
src/webscraper_futbol.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
