[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webscraper_futbol"
version = "0.1.4"
description = "Web scraper de fútbol (Uruguay) con Selenium"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests",
  "beautifulsoup4",
  "html5lib",
  "selenium",
  "webdriver-manager"
]

[tool.setuptools.packages.find]
where = ["src"]